--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,8 +11,11 @@
   },
   "dependencies": {
     "axios": "^1.9.0",
+    "i18next": "^25.2.1",
+    "i18next-http-backend": "^3.0.2",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-i18next": "^15.5.2",
     "react-router-dom": "^7.6.0",
     "react-slick": "^0.30.3",
     "recharts": "^2.15.3",
