--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "axios": "^1.9.0",
+    "flag-icons": "^7.5.0",
     "i18next": "^25.2.1",
     "i18next-http-backend": "^3.0.2",
     "react": "^19.1.0",
