--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,9 @@ yarn-error.log*
 lerna-debug.log*
 .pnpm-debug.log*
 
+# Environment variables
+.env
+
 # Ignore operating system files
 .DS_Store
 thumbs.db 
