--- a/render.yaml
+++ b/render.yaml
@@ -8,6 +8,8 @@ services:
     envVars:
       - key: NODE_ENV
         value: production
+      - key: PORT
+        value: 5000
   - type: web
     name: test-project-32qx
     env: node
