set up cloudflare

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,9 +5,10 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "vite build",
+    "build": "vite build --outDir dist",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "cloudflare:build": "npm install && npm run build"
   },
   "dependencies": {
     "axios": "^1.9.0",
